--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ app.jwt-secret=JWTSecreteKey
 app.jwt-expiration-milliseconds=604800000
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
